        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14848
        DOM table rules are not updated when changed

        On a dynamic rules attr change, mark the table cells and
        their ancestors (up to and including the table tag) as
        changed.



Canonical link: https://commits.webkit.org/19740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25246 268f45cc-cd09-0410-ab3c-d52691b4dbfc